<?php
declare(strict_types=1);

namespace Main\Helpers\MarkupData\Exceptions;

use
    Throwable,
    Exception;
/** ***********************************************************************************************
 * parse data exception
 *
 * @package exchange_helpers
 * @author  Hvorostenko
 *************************************************************************************************/
class ParseDataException extends Exception implements Throwable
{

}